--- a/template_views/dev_v2/frontend_student/Login_student/verify_login_student.ejs
+++ b/template_views/dev_v2/frontend_student/Login_student/verify_login_student.ejs
@@ -54,7 +54,8 @@
           </div>
         </div>
         <div class="item__right">
-          <img src="<%= data?.qr_code %>" alt="qr_code Loading....">
+          <!-- <img src="<%= data?.qr_code %>" alt="qr_code Loading...."> -->
+          <img src="/landing_page/img/logo_img_1.svg" alt="qr_code Loading....">
         </div>
       </div>
     </div>
